--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -68,7 +68,7 @@
 <div style="height: 100px;">
     <div style="text-align: left; margin:5px; position: absolute;" id="selectFields">Show fields: <br></div>
 
-    <div style="text-align: right; float: right; margin:20px;  ">Max per group:<input id="maxPerGroup" type="number" min="0"/>Number of groups:<input id="totalTeams" type="number" min="0"/><br><br></div>
+    <div style="text-align: right; float: right; margin:20px;  ">Max per group:<input id="maxPerGroup" type="number" readonly min="0"/>Number of groups:<input id="totalTeams" type="number" min="0"/><br><br></div>
 </div>
 <div class="container">
     <button style="width: 100px; float:left;" class="form-control" id="shuffle">Shuffle</button>
